corrected the error messages
SVN-Revision: 21051

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1559,8 +1559,8 @@ error.specimenId.add Please add specimen Identifier to view to add specimen to c
 page.dateFormat [MM-DD-YYYY]
 home.text.bullet1 caTissue Suite is a web based informatics system that keeps track of multiple specimens from the participant, tracks refined materials (RNA, DNA, Protein) that are used for molecular analysis, and annotate biospecimens with accumulating experimental data, as they are successively used for clinical correlative studies.
 home.text.bullet2 caTissue Suite also helps in reducing the evolving functional complexity of the biospecimen banks in collecting, processing, storing, and distribution of human specimens for correlative scientific cancer research.
-error.object.closed is already marked as closed.
-error.object.disabled is already marked as disabled.
+error.object.closed {0} is already marked as closed.
+error.object.disabled {0} is already marked as disabled.
 
 #-- Query Rule Keys --
 participant.queryRule=Participant Query Rule
@@ -2373,3 +2373,4 @@ obj.not.instanceof.specimen = object is not instanceof specimen.
 error.privileges.from.given.role = Error while getting privileges from given role.
 hibernate.exception = Hibernate Exception.
 SQL.exp = Error while executing query.
+print.issue = Error while printing.
