bug #12727: modified  query12 Title.
SVN-Revision: 21224

--- a/CaTissueSuite_caGrid_Service/cqls/query.properties
+++ b/CaTissueSuite_caGrid_Service/cqls/query.properties
@@ -9,4 +9,4 @@ query8=Return number of Tissue specimen collected in collection protocol = 'CP P
 query9=Return malignant prostate DNA specimens from African American participants who are on a CP with the word "Prostate" in the title
 query10=Return breast frozen malignant tissue specimens where tissue review event shows greater than 90% neoplastic cellularity
 query11=Return Tissue specimens which have been collected by the 'Lavage' procedure &&  that have been collected in an unacceptable quality
-query12=Return Patient for Tumor identified by needle Biopsy where collection protocol title like "Prostate"
+query12=Return Patient for Tumor identified by needle Biopsy where collection protocol title like 'Prostate'
