--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2090,6 +2090,7 @@ shipment.containerValidation =  <li> {0} is currently stored in {1} .You cannot 
 shipment.container.RequestingSite =  <li>Container {0} belongs to the Requesting Site.</li>
 shipment.containerInShipment =  <li> {0} is currently included in a Shipment. You cannot request for a specimen or container that has been included in a shipment.</li>
 shipment.specimenInShipment =  <li> {0} is currently included in a Shipment. You cannot request for a specimen or container that has been included in a shipment.</li>
+shipment.containerInShipmentValidation = <li> {0} is currently included in another Shipment.You cannot include a specimen or container in more than one shipment.</li>
 shipment.specimenInRequestingSite =  <li>Specimen {0} belongs to the Requesting Site.</li>
 shipment.noSpecimenInRequest =  <li>Request doesn't contain any specimens of containers.</li>
 #-- Uncomment when in SNT
