Bug# 12915- Incorrect version is shown on login pg after upgrading  RC4 to P3, fixed.
SVN-Revision: 21686

--- a/caTissueSuite_Client/ApplicationResources.properties
+++ b/caTissueSuite_Client/ApplicationResources.properties
@@ -2177,8 +2177,8 @@ print.printerLocationLabel = Printer Location
 
 #---- Persistent Info. Displayed on home page
 pspl.catissue.support = Persistent's caTissue Support Center
-pspl.catissue.footNote = This version of caTissue (<a href="Aboutv11p.do">About caTissue Suite v1.1.p3</a>) is brought to you by <A href="http://www.persistentsys.com">Persistent Systems Ltd</A>. Persistent is a NCI certified caBIG© service provider and co-developer of caTissue along with Washington University, Saint Louis. Visit us at <A HREF="http://www.catissue.com" class="view">www.catissue.com</A> or Call 1-877-CATISSUE (9AM - 5PM ET) for any help.
-pspl.catissue.about = About caTissue Suite v1.1.p3
+pspl.catissue.footNote = This version of caTissue (<a href="Aboutv11p.do">About caTissue Suite {0}</a>) is brought to you by <A href="http://www.persistentsys.com">Persistent Systems Ltd</A>. Persistent is a NCI certified caBIG© service provider and co-developer of caTissue along with Washington University, Saint Louis. Visit us at <A HREF="http://www.catissue.com" class="view">www.catissue.com</A> or Call 1-877-CATISSUE (9AM - 5PM ET) for any help.
+pspl.catissue.about = About caTissue Suite {0}
  
 #---- For Summary Page ----
 summary.page.contactInfo = Contact Information
