--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1732,6 +1732,7 @@ summary.page.quantity.fluid=ml
 shoppingcart.error=Specimen is already present in the cart.
 shoppingcart.differentViewError=Cannot add in to List as view of List is different.
 shoppingcart.duplicateObjError={1} record was already present so remaining {0} records are added in the List.
+shoppingcart.HashedOutError= {0} records in the List.Either you don't have privilege to add them or they are already present in the list.
 shoppingcart.duplicateObjsError={1} records were already present so remaining {0} records are added in the List.
 shoppingcart.exportfilexception=Error while exporting the file.Please contact Administrator.
 
