Titli dependency should be removed from common-package Bug #12994
SVN-Revision: 22027

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2376,3 +2376,4 @@ error.privileges.from.given.role = Error while getting privileges from given rol
 hibernate.exception = Hibernate Exception.
 SQL.exp = Error while executing query.
 print.issue = Error while printing.
+titli.error = Error in titli, this method should be overridden in application specific bizlogics.
