--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2094,6 +2094,7 @@ shipment.specimenInShipment =  <li> {0} is currently included in a Shipment. You
 shipment.containerInShipmentValidation = <li> {0} is currently included in another Shipment.You cannot include a specimen or container in more than one shipment.</li>
 shipment.specimenInRequestingSite =  <li>Specimen {0} belongs to the Requesting Site.</li>
 shipment.noSpecimenInRequest =  <li>Request doesn't contain any specimens of containers.</li>
+shipment.samePositionForSpecimens = Storage position is already occupied by other specimen.
 #-- Uncomment when in SNT
 buttons.reject=Reject  
 buttons.create.shipment=Create Shipment
