--- a/build.xml
+++ b/build.xml
@@ -565,6 +565,7 @@
 		<copy file="properties-service.xml" todir="${zip.dir}" overwrite="true" />
     	<copy file="deploy_uk_edin.xml" todir="${zip.dir}" overwrite="true" />
 		<copy file="deploy_barcode_generator_DFCI.xml" todir="${zip.dir}" overwrite="true" />
+		<copy file="taggedvalues.xml" todir="${zip.dir}" overwrite="true" />
 			
 		<copy todir="${zip.dir}/catissuecore-properties" overwrite="true">
 			<fileset dir="${base.dir}/catissuecore-properties" />
