--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2296,6 +2296,7 @@ min.year=1900
 max.year=2300
 
 collprot.title.exists = Collection Protocol with the same Title already exists
+collprot.short.title.exists = Collection Protocol with the same Short Title already exists
 cde.init.issue =  Failed to get CDE manager object, CDE Manager is not yet initialized.
 audit.error =  Error while auditing.
 event.req = At least one event is required to create Collection Protocol
@@ -2378,3 +2379,6 @@ hibernate.exception = Hibernate Exception.
 SQL.exp = Error while executing query.
 print.issue = Error while printing.
 titli.error = Error in titli, this method should be overridden in application specific bizlogics.
+#---HomeLogo.jsp---
+siteman.url = http://www.siteman.wustl.edu/
+cabig.url = http://cabig.nci.nih.gov/
