integrated with IDP . Bug ID 12087.
SVN-Revision: 22780

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2382,3 +2382,6 @@ titli.error = Error in titli, this method should be overridden in application sp
 #---HomeLogo.jsp---
 siteman.url = http://www.siteman.wustl.edu/
 cabig.url = http://cabig.nci.nih.gov/
+
+#For IdP
+errors.noRole=User doesn't have any role for application so can't login into application.
