--- a/caTissueInstall.properties
+++ b/caTissueInstall.properties
@@ -71,3 +71,28 @@ show.hide.forms.based.on.CPs=false
 
 #Choose whether to use IIS application server and configure required properties. 'true' to configure properties.
 configure.IIS.properties=false
+
+#if catissue has IdP then idp.enabled=true 
+#if  idp.enabled=true then only fill below properties of #CLINPORTAL DATABASE CREDENTIALS and #CSM DATABASE CREDENTIALS
+idp.enabled=true
+#CLINPORTAL DATABASE CREDENTIALS
+
+#database type permissible values: oracle or mysql
+clinportal.database.type=
+#Hostname or IP address of the machine on which the database server is running.
+clinportal.database.host=
+#Port number to connect with the database server
+#Default port for MySQL : 3306
+#Default Port for Oracle: 1521
+clinportal.database.port=
+clinportal.database.name=
+clinportal.database.username=
+clinportal.database.password=
+
+#CSM DATABASE CREDENTIALS
+csm.database.type=
+csm.database.host=
+csm.database.port=
+csm.database.name=
+csm.database.username=
+csm.database.password=
