--- a/WEB-INF/src/SecurityManager.properties
+++ b/WEB-INF/src/SecurityManager.properties
@@ -1,2 +1,2 @@
 application.context.name=catissuecore
-class.name=edu.wustl.security.manager.SecurityManager
+class.name=edu.wustl.catissuecore.security.SecurityManager
