--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2385,3 +2385,4 @@ cabig.url = http://cabig.nci.nih.gov/
 
 #For IdP
 errors.noRole=User doesn't have any role for application so can't login into application.
+db.mult.transaction.open.error=Transaction already opened, only one transaction can be opened at a time.
