Updated caTissue as per common package v1.1.3 Bug 13532
SVN-Revision: 22804

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2386,3 +2386,4 @@ cabig.url = http://cabig.nci.nih.gov/
 #For IdP
 errors.noRole=User doesn't have any role for application so can't login into application.
 db.mult.transaction.open.error=Transaction already opened, only one transaction can be opened at a time.
+error.audit.fail = Problem while auditing data.
