--- a/private_public_migrator/privatePublic.properties
+++ b/private_public_migrator/privatePublic.properties
@@ -1,34 +1,34 @@
 #Commands file for public private DB
 
-databaseType=
+databaseType=oracle
 
-privateDBName=
-privateDBHost=
-privateDBUserName=
-privateDBPassword=
-privateDBPort=
-
-#for Oracle only
-privateDBTablespace=
-privateDBIndexTablespace=
-
-
-stagingDBName=
-stagingDBUserName=
-stagingDBPassword=
+privateDBName=orcl
+privateDBHost=10.88.199.39
+privateDBUserName=geeta
+privateDBPassword=geeta
+privateDBPort=1521
 
 #for Oracle only
-stagingSystemUserName=
-stagingSystemPassword=
+privateDBTablespace=users
+privateDBIndexTablespace=users
 
 
-publicDBName=
-publicDBHost=
-publicDBUserName=
-publicDBPassword=
-publicDBPort=
+stagingDBName=orcl
+stagingDBUserName=staging_prashant
+stagingDBPassword=staging_prashant
 
 #for Oracle only
-publicSystemUserName=
-publicSystemPassword=
-publicDBTNSName=
+stagingSystemUserName=system
+stagingSystemPassword=oracle
+
+
+publicDBName=orcl
+publicDBHost=10.88.199.39
+publicDBUserName=public_ppm
+publicDBPassword=public_ppm
+publicDBPort=1521
+
+#for Oracle only
+publicSystemUserName=system
+publicSystemPassword=oracle
+publicDBTNSName=orcl39
