--- a/private_public_migrator/privatePublic.properties
+++ b/private_public_migrator/privatePublic.properties
@@ -1,34 +1,34 @@
 #Commands file for public private DB
 
-databaseType=oracle
+databaseType=
 
-privateDBName=orcl
-privateDBHost=10.88.199.39
-privateDBUserName=geeta
-privateDBPassword=geeta
-privateDBPort=1521
-
-#for Oracle only
-privateDBTablespace=users
-privateDBIndexTablespace=users
-
-
-stagingDBName=orcl
-stagingDBUserName=staging_prashant
-stagingDBPassword=staging_prashant
+privateDBName=
+privateDBHost=
+privateDBUserName=
+privateDBPassword=
+privateDBPort=
 
 #for Oracle only
-stagingSystemUserName=system
-stagingSystemPassword=oracle
+privateDBTablespace=
+privateDBIndexTablespace=
 
 
-publicDBName=orcl
-publicDBHost=10.88.199.39
-publicDBUserName=public_ppm
-publicDBPassword=public_ppm
-publicDBPort=1521
+stagingDBName=
+stagingDBUserName=
+stagingDBPassword=
 
 #for Oracle only
-publicSystemUserName=system
-publicSystemPassword=oracle
-publicDBTNSName=orcl39
+stagingSystemUserName=
+stagingSystemPassword=
+
+
+publicDBName=
+publicDBHost=
+publicDBUserName=
+publicDBPassword=
+publicDBPort=
+
+#for Oracle only
+publicSystemUserName=
+publicSystemPassword=
+publicDBTNSName=
