Bug:13514: removed DE add/edit features and added corresponding message in ApplicationResources.properties file. Also applied catissue css in this DefineAnnotationsInformationPage.jsp page.
SVN-Revision: 22815

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2387,3 +2387,6 @@ cabig.url = http://cabig.nci.nih.gov/
 errors.noRole=User doesn't have any role for application so can't login into application.
 db.mult.transaction.open.error=Transaction already opened, only one transaction can be opened at a time.
 error.audit.fail = Problem while auditing data.
+
+#Message to disable DE
+de.message.disable=Creating or editing a dynamic extension from UI is not available in this release. Please use import_xmi utility to load the forms.
