bug 12735 and enh 13024
SVN-Revision: 22820

--- a/caTissueInstall.properties
+++ b/caTissueInstall.properties
@@ -39,6 +39,8 @@ email.mailServer=
 #Application login timeout interval in minutes. 
 #Default value is 30 minutes
 session.timeout=30
+#sets the addition info on home page
+app.additional.info=
 
 #Information related to first administrator account
 first.admin.department=
