--- a/build.xml
+++ b/build.xml
@@ -555,6 +555,7 @@
 		
 		<copy file="allTokens.properties" todir="${zip.dir}" overwrite="true" />
 		<copy file="caTissueInstall.properties" todir="${zip.dir}" overwrite="true" />
+		<copy file="idpInstall.properties" todir="${zip.dir}" overwrite="true" />
 		<copy file="Show_Hide_Forms.csv" todir="${zip.dir}" overwrite="true" />
 		<copy file="Show_Hide_Forms.xml" todir="${zip.dir}" overwrite="true" />
 		<copy file="build-properties.xml" todir="${zip.dir}" overwrite="true" />
