Performance changes done with w.r.t Migration Tool
SVN-Revision: 22851

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -647,10 +647,6 @@ app.logoutMessage=Sign Out
 app.loginMessage=Sign In
 app.welcomeNote=Welcome to {0} {1} {2}
 app.welcomeNote.login Welcome to {0} {1}. You have successfully logged in.
-#--Main Menu Keys End--
-
-#-----Help Page-- 
-app.help=Help
 app.userguide=User Guide
 app.userguide.message=This guide is intended for end users. It includes instructions and information for using the caTissue software for day-to-day tissue banking operations.
 app.technicalguide=Technical Guide
@@ -764,7 +760,7 @@ buttons.cancel=Cancel
 buttons.send=Send
 buttons.reset=Reset
 buttons.approve=Approve
-buttons.reject=Reject
+buttons.reject=Reject  
 buttons.submit=Submit
 buttons.addPrivileges=Save Privilege
 buttons.close=Close
@@ -2031,7 +2027,6 @@ user.roleIsRequired = Role
 user.cannotEditOwnPrivileges =  User cannot change own privileges.
 user.cannotCreateScientist = User does not have privilege to create a Scientist user. 
 cp.cannotChangePrivilegesOfPIOrCoord =  User cannot change privileges of PI or Coordinator.
-cp.siteIsRequired = Access denied ! User cannot create a global CP. Please give privilege to atleast one user on your Site.
 cp.siteIsRequired = Cannot create a Collection Protocol without associating any sites and users. Please visit the Assign Privileges page for the same.
 user.roleNotFound = User Role details not found.
 sc.unableToFindContainer =  Unable to find Storage Container.
@@ -2095,8 +2090,6 @@ shipment.containerInShipmentValidation = <li> {0} is currently included in anoth
 shipment.specimenInRequestingSite =  <li>Specimen {0} belongs to the Requesting Site.</li>
 shipment.noSpecimenInRequest =  <li>Request doesn't contain any specimens of containers.</li>
 shipment.samePositionForSpecimens = Storage position is already occupied by other specimen.
-#-- Uncomment when in SNT
-buttons.reject=Reject  
 buttons.create.shipment=Create Shipment
  
 #-- Error Keys --
@@ -2109,7 +2102,7 @@ errors.item.specificMessage=<li><font color="red">{0}</font></li>
 
 #-- Domain objects --
 domain.shipment=Shipment
-domain.shipment.request=ShipmentRequest
+domain.shipment.request=ShipmentRequestdomain.shipment.request\=ShipmentRequest
 
 #-- For UI screen messages --
 dashboard.requestreceived=Incoming Shipment Requests
@@ -2135,7 +2128,6 @@ newShipmentRequest=New Shipment Request
 viewSummary=View Summary
 shipment.summary=Shipment Summary
 shipment.request.summary=Shipment Request Summary
-domain.shipment.request=ShipmentRequestdomain.shipment.request=ShipmentRequest
 createShipment.specimen.labelchoicequestion=Do you want to enter Label or Barcode
 createShipment.container.labelchoicequestion=Do you want to enter Name or Barcode
 createShipment.container.name=Name
@@ -2244,7 +2236,7 @@ impexp.dbtype.error=Not able to get import/export class. Please make sure databa
 datatype.parse.error=There was a problem reading XML file.
 #This is generic message used in commonpackage, its not in DAO.
 db.operation.error=Error in db operation.
-sm.operation.error=Error in Security Manager Operation.
+sm.operation.error=Security Manager related issues.
 pw.encrypt.error=Password encryption error.
 user.not.auth=User is not authorized 
 csm.getinstance.error=Not able to get csm Instance.
@@ -2281,7 +2273,6 @@ db.open.transaction.error=Problem while opening new transaction.
 dao.method.without.implementation=There is no implementation for this method:Check again before calling this method.
 
 dao.error=DAO related issues.
-sm.operation.error=Security Manager related issues.
 utility.error=caApplication utility method execution issues.
 de.error=Dynamic extension error.
 clz.not.found.error=Class not found error. 
@@ -2309,13 +2300,16 @@ status.collected =  Collection Status should be collected to allocate storage lo
 position.nt.changed =  Storage Position should not be changed while updating the specimen
 lineage.nt.changed =  Lineage should not be changed while updating the specimen
 clzz.nt.changed =  Class should not be changed while updating the specimen
-storage.nt.hold.spec =  This Storage Container cannot hold 	{0}  Specimen 
+storage.nt.hold.spec = This Storage Container cannot hold \t{0}  Specimen 
 invalid.label.barcode =  Invalid Label or Barcode for Parent Specimen :{0}
+invalid.parent.specimen.identifier = Invalid Identifier of Parent Specimen :{0}
+error.parent.specimen.consent.tier = Error in ConsentTierStatusCollection retrieval for Parent Specimen :{0}
+error.parent.specimen.biohazard = Error in BioHazard Collection retrieval for Parent Specimen :{0}
 label.mandatory =  Lable is a manadatory field
 msg.for.derived.spec =  (This message is for Derived Specimen {0} of Parent Specimen number )
-spec.nt.saved =  specimen number {0} cannot be saved. 
+spec.nt.saved = specimen number {0} cannot be saved. 
 child.nt.saved =  Cannot insert child specimen {0}, of specimen {1}.
-failed.saved =  Failed to save. 
+failed.saved = Failed to save. 
 invalid.label =  Invalid Specimen with label {0}
 user.nt.auth.spec =  User not authorized to update specimens
 label.already.exits =  Label {0} is already exists!
@@ -2331,7 +2325,7 @@ cp.nt.found =  This Collection Protocol not found
 
 
 cp.retrive.err =  Cannot retrieve Collection protocol, incorrect id {0}
-cp.incorrect.param =  Cannot retrieve Collection protocol incorrect parameter {0} = {1} 
+cp.incorrect.param = Cannot retrieve Collection protocol incorrect parameter {0} \= {1} 
 cp.shr.title.incorrect = Cannot retrieve Short Title incorrect id {0}
 sm.priv.error =  error in checking privilge on {0}
 cnnot.close.site.with.spec =  Site contains specimens in the associated containers. Cannot close a site containing specimens.
@@ -2343,6 +2337,7 @@ sm.err.csm.loc =  Error in getting csm group locator instance
 cpr.nt.null =  CPR cannot be null for SCG
 
 failed.ret.scg =  Failed to retrieve SCG, either Name or Identifier is required
+failed.ret.scg.consent.tier = Failed to retrieve SCG Consent Tier Collection, Identifier is required
 spec.moved.diff.loc =  Specimen {0} had been moved to another location! Updated the locations. Please redo the transfers.
 storage.con.full =  The Storage Container you specified is full
 
@@ -2355,18 +2350,17 @@ storage.info.nt.found =   Storagecontainer information not found!
 storage.full =  Either Storagecontainer is full! or it cannot accomodate all the specimens.
 storage.container.has.nt.enough.space  = The container you specified does not have enough space to allocate storage position for Container Number {0}
 			
-spec.not.compatible =   Please add compatible specimens to specimen array (belong to same specimen class & specimen types of Array)				
+spec.not.compatible = Please add compatible specimens to specimen array (belong to same specimen class & specimen types of Array)\t\t\t\t
 quantity.more.then.distri.quantity =  Quantity {0} should be less than current Distributed Quantity {1} of specimen :: {2}
 
 enter.quantity.mol.spec =  Please enter quantity for Molecular Specimen ----> {0}
 spec.array.should.contain.atleast.one.spec =  Specimen Array should contain at least one specimen
-spec.array.spec.invalid =  Please enter valid specimen for specimen array!! Specimen is closed/disabled {0} 
-spec.array.spec.does.nt.exists =  Please enter valid specimen for specimen array!!specimen does not exist {0} 
+spec.array.spec.invalid = Please enter valid specimen for specimen array\!\! Specimen is closed/disabled {0} 
+spec.array.spec.does.nt.exists = Please enter valid specimen for specimen array\!\!specimen does not exist {0} 
 spec.array.null =  Specimen Array for uploading is null
 storage.specified.full =  The Storage Container you specified is full
 
 pwd.encrytion.error =  Error while encrypting password.
-de.error =  Dynamic extension error.
 role.nt.retrieved =  Could not get the role
 name.generator.exp = Name generator exception.
 class.notFound.exp = Class not found exception
