Added eMPI database related values.
SVN-Revision: 22904

--- a/caTissueInstall.properties
+++ b/caTissueInstall.properties
@@ -73,3 +73,12 @@ show.hide.forms.based.on.CPs=false
 
 #Choose whether to use IIS application server and configure required properties. 'true' to configure properties.
 configure.IIS.properties=false
+
+
+# eMPI database related values
+empi.database.host=10.88.26.32
+empi.database.port=50000
+empi.database.name=cider
+empi.database.username=administrator
+empi.database.password=v-ciderqa!@#
+empi.database.schema=ADMINISTRATOR
