Bug 12754 -  Merge WashU specific changes into generic private migrator,fixed
SVN-Revision: 22944

--- a/private_public_migrator/privatePublic.properties
+++ b/private_public_migrator/privatePublic.properties
@@ -1,6 +1,6 @@
 #Commands file for public private DB
 
-databaseType=
+databaseType=oracle
 
 privateDBName=
 privateDBHost=
@@ -13,13 +13,15 @@ privateDBTablespace=
 privateDBIndexTablespace=
 
 
-stagingDBName=
-stagingDBUserName=
-stagingDBPassword=
+stagingDBName=orcl
+stagingDBUserName=prashant_staging
+stagingDBPassword=prashant_staging
+stagingDBHost=10.88.199.39
+stagingDBPort=1521
 
 #for Oracle only
-stagingSystemUserName=
-stagingSystemPassword=
+stagingSystemUserName=system
+stagingSystemPassword=oracle
 
 
 publicDBName=
