--- a/build.xml
+++ b/build.xml
@@ -568,7 +568,11 @@
     	<copy file="deploy_uk_edin.xml" todir="${zip.dir}" overwrite="true" />
 		<copy file="deploy_barcode_generator_DFCI.xml" todir="${zip.dir}" overwrite="true" />
 		<copy file="taggedvalues.xml" todir="${zip.dir}" overwrite="true" />
-			
+		
+		<copy todir="${zip.dir}/idp" overwrite="true">
+					<fileset dir="${base.dir}/idp" />
+		</copy>
+		
 		<copy todir="${zip.dir}/catissuecore-properties" overwrite="true">
 			<fileset dir="${base.dir}/catissuecore-properties" />
 		</copy>
