Removed the eMPI db configuration values.
SVN-Revision: 23129

--- a/caTissueInstall.properties
+++ b/caTissueInstall.properties
@@ -76,9 +76,9 @@ configure.IIS.properties=false
 
 
 # eMPI database related values
-empi.database.host=10.88.26.32
-empi.database.port=50000
-empi.database.name=cider
-empi.database.username=administrator
-empi.database.password=v-ciderqa!@#
-empi.database.schema=ADMINISTRATOR
+empi.database.host=
+empi.database.port=
+empi.database.name=
+empi.database.username=
+empi.database.password=
+empi.database.schema=
