--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -555,7 +555,7 @@ errors.editRejectedUser=Cannot edit a rejected user.
 errors.editNewPendingUser=This user is not yet approved. Approve this user from the "Approve New Users" link.
 errors.forgotpassword.user.notApproved=Your membership is not approved yet.
 errors.forgotpassword.user.unknown=User does not exist.
-errors.incorrectLoginNamePassword=Incorrect e-mail address or password.
+errors.incorrectLoginIDPassword=Incorrect Login ID or password
 errors.exceptionErrorMessage=An unknown error occurred. Please try again later.
 errors.userNotLoggedIn=Please login to access the page
 errors.item.selected=Please select the valid {0} from the list.
@@ -2378,9 +2378,26 @@ siteman.url = http://www.siteman.wustl.edu/
 cabig.url = http://cabig.nci.nih.gov/
 
 #For IdP
-errors.noRole=User doesn't have any role for application so can't login into application.
+errors.noRole=User doesn't have any role for application, so can't login into application.Please click Report Problems to inform your System Administrator.
 db.mult.transaction.open.error=Transaction already opened, only one transaction can be opened at a time.
 error.audit.fail = Problem while auditing data.
 
 #Message to disable DE
 de.message.disable=Creating or editing a dynamic extension from UI is not available in this release. Please use import_xmi utility to load the forms.
+
+#WustlKey
+errors.incorrectWustlKey=Please enter correct WUSTL key and WUSTL password for login.
+app.migrateduser=Our records show that you need to log into caTissue using your WUSTL Key. Please try again below.
+app.wustlkey= WUSTL Key
+buttons.migrate=Migrate
+buttons.without.migration=Proceed Without Migration
+app.washuuser=You have successfully logged into caTissue. However, you have no privileges in this application.Please enter your information below to have your account activated for use in caTissue.
+app.wustlkey.donotaskagain = Do Not Ask Again
+errors.wustlkeyorpassword = Incorrect WUSTLKey or password.
+forgotId.wustlkey=Forgot WUSTLKey
+forgotpassword.wustlkeypassword=Forgot WUSTLKey password
+app.UserID = Login ID
+wustlkey.message =Your WUSTL Key allows you to log into multiple Washington University administrative and clinical research systems.In order to use your WUSTL Key to log into caTissue, please enter your WUSTL Key and password below. If you choose not to have you account migrated to using your WUSTL Key, please press 'Proceed Without Migration'. In order to avoid seeing this page in the future if you choose not to migrate your account, please check the 'Do Not Ask Again' box.
+Wustlkey.header=WUSTL Key
+msg.item={0}
+migration.msg = Note: You are successfully migrated to WUSTL Key, Please use WUSTL Key to log in the application from the next time.
