--- a/log4j.properties
+++ b/log4j.properties
@@ -9,7 +9,7 @@ log4j.rootCategory=INFO, CONSOLE
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.Threshold=INFO
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern=%5p %d{HH:mm:ss,SSS} (%C{1}) - %m%n
+log4j.appender.CONSOLE.layout.ConversionPattern=%5p %d{HH:mm:ss,SSS} (%c{1}) %x : %L - %m%n
 
 # LOGFILE is set to be a File appender using a PatternLayout.
 log4j.appender.LOGFILE=org.apache.log4j.RollingFileAppender
@@ -19,7 +19,7 @@ log4j.appender.HIBERNATE.MaxFileSize=1024KB
 log4j.appender.HIBERNATE.MaxBackupIndex=7
 log4j.appender.LOGFILE.Threshold=INFO
 log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.LOGFILE.layout.ConversionPattern=%-4r %d [%t] %-5p %C{3} - %m%n
+log4j.appender.LOGFILE.layout.ConversionPattern=%-4r %d [%t] %-5p %c{2} %x : %L - %m%n
 # LOGFILE for all hibernate logs
 log4j.appender.HIBERNATE=org.apache.log4j.RollingFileAppender
 log4j.appender.HIBERNATE.File=@@jbosshome@@/log/hibernatesql.log
@@ -28,7 +28,7 @@ log4j.appender.HIBERNATE.MaxFileSize=1024KB
 log4j.appender.HIBERNATE.MaxBackupIndex=7
 log4j.appender.HIBERNATE.Threshold=INFO
 log4j.appender.HIBERNATE.layout=org.apache.log4j.PatternLayout
-log4j.appender.HIBERNATE.layout.ConversionPattern= %-5p %d %c - %m%n
+log4j.appender.HIBERNATE.layout.ConversionPattern= %-5p %d %c{1} %x : %L - %m%n
 
 
 log4j.logger.org.hibernate=info,HIBERNATE
