Fixed bugs 14263 and 14267.
SVN-Revision: 23329

--- a/WEB-INF/src/ShippingTrackingApplicationResources.properties
+++ b/WEB-INF/src/ShippingTrackingApplicationResources.properties
@@ -29,7 +29,11 @@ shipemntRequest.details=Shipment Request Details
 shipment.sendOn=Send On
 shipment.sendDate=Shipping Time
 shipment.label=Shipment Label
+specimen.label=Specimen Label
+container.label=Container Label
 shipment.barcode=Shipment Barcode
+specimen.barcode=Specimen Barcode
+container.barcode=Container Barcode
 shipment.receiverSite=Receiver Site
 shipment.senderSite=Sender Site
 shipment.receiver=Receiver
