fixes for bug 14677
SVN-Revision: 23339

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2403,3 +2403,4 @@ wustlkey.message =Your WUSTL Key allows you to log into multiple Washington Univ
 Wustlkey.header=WUSTL Key
 msg.item={0}
 migration.msg = Note: You are successfully migrated to WUSTL Key, Please use WUSTL Key to log in the application from the next time.
+user.not.exists=User with login name {0} does not exist.
