fields added for bug 14351.
SVN-Revision: 23342

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1360,6 +1360,8 @@ molecularspecimenreviewparameters.gelnumber=Gel Number
 molecularspecimenreviewparameters.absorbanceat260=Absorbance At 260
 molecularspecimenreviewparameters.absorbanceat280=Absorbance At 280
 molecularspecimenreviewparameters.ratio28STo18S=Ratio 28S To 18S
+molecularspecimenreviewparameters.absorbanceRatioOf260/280=Absorbance ratio of 260/280
+molecularspecimenreviewparameters.absorbanceRatioOf260/280.validationMsg=Absorbance ratio cannot be calculated. Please enter valid values.
 molecularspecimenreviewparameters.name=Molecular Specimen Review Event Parameters
 molecularspecimenreviewparameters.title=New Molecular Specimen Review Event Parameters
 molecularspecimenreviewparameters.edittitle=Edit Molecular Specimen Review Event Parameters
