Changes for Bulk Operation functionality.
SVN-Revision: 23402

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2309,6 +2309,7 @@ lineage.nt.changed =  Lineage should not be changed while updating the specimen
 clzz.nt.changed =  Class should not be changed while updating the specimen
 storage.nt.hold.spec = This Storage Container cannot hold \t{0}  Specimen 
 invalid.label.barcode =  Invalid Label or Barcode for Parent Specimen :{0}
+invalid.site.name =  Invalid Site Name : {0}
 invalid.parent.specimen.identifier = Invalid Identifier of Parent Specimen :{0}
 error.parent.specimen.consent.tier = Error in ConsentTierStatusCollection retrieval for Parent Specimen :{0}
 error.parent.specimen.biohazard = Error in BioHazard Collection retrieval for Parent Specimen :{0}
