--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2410,3 +2410,5 @@ Wustlkey.header=WUSTL Key
 msg.item={0}
 migration.msg = Note: You are successfully migrated to WUSTL Key, Please use WUSTL Key to log in the application from the next time.
 user.not.exists=User with login name {0} does not exist.
+email.washu.user=Incorrect email address, WashU domain email address
+confirm.washu.user=Incorrect confirm email address, WashU domain email address
