Nightly build reports was changed while adding the cobertura code coverage. Changing the directories back to same directory strutures.
SVN-Revision: 23428

--- a/caTissueSuite_Client/build.xml
+++ b/caTissueSuite_Client/build.xml
@@ -74,8 +74,8 @@
 		</target>
 
 	<target name="runJunitTestCases" depends="compile_junit_TestCases">
-		<mkdir dir="${target.dir}/reports" />
-		<mkdir dir="${target.dir}/reports/junit" />
+		<mkdir dir="${report.dir}/Nightly_Build_Report" />
+		<mkdir dir="${report.dir}/Nightly_Build_Report/Html_reports" />
 
 		<junit printsummary="yes" fork="yes" haltonfailure="no">
 			<formatter type="xml" />
