Bug 14963 -  Bulk operation target failed.
SVN-Revision: 23443

--- a/build.xml
+++ b/build.xml
@@ -1036,7 +1036,7 @@
             	<include name="DAO.jar"/>
             	<include name="SimpleQuery.jar"/>
             	<include name="securityManager.jar"/>
-            	
+            	<include name="bulkoperator.jar"/>
             </fileset>
 			<fileset dir="${temp.dir}">
 	            	<include name="catissuecore.jar"/>
