Bug 15034 -  Bulk operations menu shows server error.
SVN-Revision: 23472

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2420,13 +2420,14 @@ bulk.upload.file=Upload data:
 bulk.button.download.template=Download CSV Template
 bulk.button.upload=Upload CSV Template
 bulk.view.report=Click here to view report
-bulk.error.incorrect.operation.name=Incorrect bulk operation. No such operation is allowed in Bulk Operation. Please report this problem to Administrator.
+bulk.error.incorrect.operation.name=Incorrect bulk operation. No such operation is allowed in Bulk Operation.
 bulk.error.bulk.metadata.xml.file=Error in loading BULK OPERATION META DATA. Please report this problem to Administrator.
 bulk.error.incorrect.csv.column.name=Column name is not specified for a attribute in bulk operation meta data.Please report this problem to the Administrator.
 bulk.error.incorrect.xml.attribute.datatype=DataType specified for the Attribute in bulk operation meta data  not specified. Please report this problem to the Administrator.
 bulk.error.create.csv.output.file=Error in creating the CSV Output File. Please report this problem to Administrator.
-bulk.error.loading.bulk.metadata.xml.file=Error in loading bulk operation related meta data. Please report this error to Administrator.
+bulk.error.loading.bulk.metadata.xml.file=Error in loading bulk operation related meta data. Please report this problem to Administrator.
 bulk.error.reading.csv.file=Error in reading the uploaded .csv file. Please try again.
 bulk.object.not.found=Object not found in the database.
 bulk.success.message=Bulk operation successfully done.
 bulk.error.csv.column.name.change=Column name in CSV template is changed. Please download a new template again.
+bulk.error.database.operation.reading.operation.name.xml.template=Error in Database operation while retrieving the Bulk Operation Name and its meta data. Please report this problem to Administrator.
