UI Message added when no bulk operations templates loaded in the system.
SVN-Revision: 23485

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2431,3 +2431,4 @@ bulk.object.not.found=Object not found in the database.
 bulk.success.message=Bulk operation successfully done.
 bulk.error.csv.column.name.change=Column name in CSV template is changed. Please download a new template again.
 bulk.error.database.operation.reading.operation.name.xml.template=Error in Database operation while retrieving the Bulk Operation Name and its meta data. Please report this problem to Administrator.
+bulk.no.templates.loaded.message=No Bulk Operation Templates Loaded in the Application.
