--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1391,6 +1391,7 @@ transfereventparameters.edittitle=Edit Transfer Event Parameters
 transfereventparameters.searchTitle=Enter the Identifier
 transfereventparameters.fromposition=From Position
 transfereventparameters.toposition=To Position
+transfereventparameters.storageContainer.name=container name
 #-- transfereventparameters Add/Edit Keys End --
 
 #-- spuneventparameters Add/Edit Keys Begin --
@@ -1700,6 +1701,7 @@ events.method.errMsg=Method is invalid.
 events.receivedQuality.errMsg=Received Quality is invalid.
 events.histologicalQuality.errMsg=Histological Quality is invalid.
 events.toPosition.errMsg=To Position should be same while updating Transfer Event Parameters.
+events.toPosition.samePosition=Multiple specimens can't be stored in same storage position.
 
 #---For all pages
 allPage.disableConfirm=Are you sure you want to disable?
