Changed date pattern.
SVN-Revision: 23536

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -700,7 +700,7 @@ app.userProfile=User Profile
 app.collectionProtocol=Collection Protocol
 app.CollectionProtocolRegistration= Collection Registration Protocol
 app.distributionProtocol=Distribution Protocol
-app.specimenCollectionGroup=Specimen 
+app.specimenCollectionGroup=Specimen
 app.site=Site
 app.user=User
 app.department=Department
@@ -711,7 +711,7 @@ app.reportedProblems=Report Problems
 app.storagetype=Storage Type
 app.storageContainer=Storage Container
 app.biohazard=Biohazard
-app.conflict=Surgical Pathology Reports 
+app.conflict=Surgical Pathology Reports
 app.pendingrequests=Pending Requests
 #--Adminitrative Data SubMenu Keys Ends--
 
@@ -761,7 +761,7 @@ buttons.cancel=Cancel
 buttons.send=Send
 buttons.reset=Reset
 buttons.approve=Approve
-buttons.reject=Reject  
+buttons.reject=Reject
 buttons.submit=Submit
 buttons.addPrivileges=Save Privilege
 buttons.close=Close
@@ -1948,13 +1948,13 @@ cpbasedentry.derivedspecimen.quantity=Derive Specimen Quantity
 
 # AnticipatorySpecimens class Keys begin
 anticipatorySpecimen.Collected Coll?
-specimen.printLabel Print 
+specimen.printLabel Print
 anticipatorySpecimen.CollectAll Collect All
 anticipatorySpecimen.Created Create All
 anticipatorySpecimen.Concentration Conc.
 anticipatorySpecimen.Quantity Qty
 anticipatorySpecimen.Location Storage location
-anticipatorySpecimen.AliquotDetails Aliquot Details 
+anticipatorySpecimen.AliquotDetails Aliquot Details
 anticipatorySpecimen.DerivativeDetails Derivative Details
 anticipatorySpecimen.Parent Parent
 # AnticipatorySpecimens class Keys end
@@ -2008,7 +2008,7 @@ bulk.events.disposals=Bulk Disposal Events
 specimen.cart.size.zero=No specimen selected
 
 edit.multiple.specimen=Edit Multiple Specimens
-#print 
+#print
 print.success Printed successfully.
 print.failure No printer configuration is available.
 
@@ -2034,7 +2034,7 @@ user.cannotCreateSuperAdmin = User does not have privilege to create Super Admin
 user.siteIsRequired =  Role and / or Site is required
 user.roleIsRequired = Role
 user.cannotEditOwnPrivileges =  User cannot change own privileges.
-user.cannotCreateScientist = User does not have privilege to create a Scientist user. 
+user.cannotCreateScientist = User does not have privilege to create a Scientist user.
 cp.cannotChangePrivilegesOfPIOrCoord =  User cannot change privileges of PI or Coordinator.
 cp.siteIsRequired = Cannot create a Collection Protocol without associating any sites and users. Please visit the Assign Privileges page for the same.
 user.roleNotFound = User Role details not found.
@@ -2076,7 +2076,7 @@ shipment.contentsLabelOrBarcode=Label/Barcode
 shipment.contentsNameOrBarcode=Name/Barcode
 shipment.contentsSelect=Select
 shipment.contentsSpecimenLabel=Specimen
-shipment.contentsContainerLabel=Container 
+shipment.contentsContainerLabel=Container
 shipment.senton=Sent on
 specimen.details=Specimen Details
 container.details=Container Details
@@ -2100,7 +2100,7 @@ shipment.specimenInRequestingSite =  <li>Specimen {0} belongs to the Requesting 
 shipment.noSpecimenInRequest =  <li>Request doesn't contain any specimens of containers.</li>
 shipment.samePositionForSpecimens = Storage position is already occupied by other specimen.
 buttons.create.shipment=Create Shipment
- 
+
 #-- Error Keys --
 errors.invalid.object.passed=<li><font color="red">Invalid object passed to bizlogic</font></li>
 errors.mail.sending.failed="<li><font color="red">Mail sending failed</font></li>
@@ -2183,7 +2183,7 @@ print.printerLocationLabel = Printer Location
 pspl.catissue.support = Persistent's caTissue Support Center
 pspl.catissue.footNote = This version of caTissue (<a href="Aboutv11p.do">About caTissue Suite {0}</a>) is brought to you by <A href="http://www.persistentsys.com">Persistent Systems Ltd</A>. Persistent is a NCI certified caBIG© service provider and co-developer of caTissue along with Washington University, Saint Louis. Visit us at <A HREF="http://www.catissue.com" class="view">www.catissue.com</A> or Call 1-877-CATISSUE (9AM - 5PM ET) for any help.
 pspl.catissue.about = About caTissue Suite {0}
- 
+
 #---- For Summary Page ----
 summary.page.contactInfo = Contact Information
 summary.page.admin = Administrator
@@ -2202,7 +2202,7 @@ summary.page.cd = By Clinical Diagnosis
 summary.page.cs = By Clinical Status
 summary.page.spDetails =  Specimens Details
 summary.page.spPathStat = Specimens by Pathological Status
-summary.page.spAnatSite = Specimens by Anatomic Site 
+summary.page.spAnatSite = Specimens by Anatomic Site
 
 #---- Generic Error Message ------------
 system.error = System has encountered unexpected error. Please contact the administrator for further help. If you would like to report this problem, please fill in the below form.
@@ -2247,7 +2247,7 @@ datatype.parse.error=There was a problem reading XML file.
 db.operation.error=Error in db operation.
 sm.operation.error=Security Manager related issues.
 pw.encrypt.error=Password encryption error.
-user.not.auth=User is not authorized 
+user.not.auth=User is not authorized
 csm.getinstance.error=Not able to get csm Instance.
 access.view.denied =Access denied ! User does not have privilege to view this information.
 #errors messages for DAO
@@ -2284,14 +2284,14 @@ dao.method.without.implementation=There is no implementation for this method:Che
 dao.error=DAO related issues.
 utility.error=caApplication utility method execution issues.
 de.error=Dynamic extension error.
-clz.not.found.error=Class not found error. 
+clz.not.found.error=Class not found error.
 
 #these properties are required for common Service Locator.
 
-date.separator=/
+date.separator=-
 date.pattern=MM-dd-yyyy
-time.pattern=HH:mm:ss
-timestamp.pattern=yyyy-MM-dd-HH24.mm.ss.SSS
+time.pattern=HH:mm
+timestamp.pattern=MM-dd-yyyy HH:mm
 min.year=1900
 max.year=2300
 
@@ -2309,7 +2309,7 @@ status.collected =  Collection Status should be collected to allocate storage lo
 position.nt.changed =  Storage Position should not be changed while updating the specimen
 lineage.nt.changed =  Lineage should not be changed while updating the specimen
 clzz.nt.changed =  Class should not be changed while updating the specimen
-storage.nt.hold.spec = This Storage Container cannot hold \t{0}  Specimen 
+storage.nt.hold.spec = This Storage Container cannot hold \t{0}  Specimen
 invalid.label.barcode =  Invalid Label or Barcode for Parent Specimen :{0}
 invalid.site.name =  Invalid Site Name : {0}
 invalid.parent.specimen.identifier = Invalid Identifier of Parent Specimen :{0}
@@ -2317,9 +2317,9 @@ error.parent.specimen.consent.tier = Error in ConsentTierStatusCollection retrie
 error.parent.specimen.biohazard = Error in BioHazard Collection retrieval for Parent Specimen :{0}
 label.mandatory =  Lable is a manadatory field
 msg.for.derived.spec =  (This message is for Derived Specimen {0} of Parent Specimen number )
-spec.nt.saved = specimen number {0} cannot be saved. 
+spec.nt.saved = specimen number {0} cannot be saved.
 child.nt.saved =  Cannot insert child specimen {0}, of specimen {1}.
-failed.saved = Failed to save. 
+failed.saved = Failed to save.
 invalid.label =  Invalid Specimen with label {0}
 user.nt.auth.spec =  User not authorized to update specimens
 label.already.exits =  Label {0} is already exists!
@@ -2335,7 +2335,7 @@ cp.nt.found =  This Collection Protocol not found
 
 
 cp.retrive.err =  Cannot retrieve Collection protocol, incorrect id {0}
-cp.incorrect.param = Cannot retrieve Collection protocol incorrect parameter {0} \= {1} 
+cp.incorrect.param = Cannot retrieve Collection protocol incorrect parameter {0} \= {1}
 cp.shr.title.incorrect = Cannot retrieve Short Title incorrect id {0}
 sm.priv.error =  error in checking privilge on {0}
 cnnot.close.site.with.spec =  Site contains specimens in the associated containers. Cannot close a site containing specimens.
@@ -2359,14 +2359,14 @@ assign.data.error =  Data error
 storage.info.nt.found =   Storagecontainer information not found!
 storage.full =  Either Storagecontainer is full! or it cannot accomodate all the specimens.
 storage.container.has.nt.enough.space  = The container you specified does not have enough space to allocate storage position for Container Number {0}
-			
+
 spec.not.compatible = Please add compatible specimens to specimen array (belong to same specimen class & specimen types of Array)\t\t\t\t
 quantity.more.then.distri.quantity =  Quantity {0} should be less than current Distributed Quantity {1} of specimen :: {2}
 
 enter.quantity.mol.spec =  Please enter quantity for Molecular Specimen ----> {0}
 spec.array.should.contain.atleast.one.spec =  Specimen Array should contain at least one specimen
-spec.array.spec.invalid = Please enter valid specimen for specimen array\!\! Specimen is closed/disabled {0} 
-spec.array.spec.does.nt.exists = Please enter valid specimen for specimen array\!\!specimen does not exist {0} 
+spec.array.spec.invalid = Please enter valid specimen for specimen array\!\! Specimen is closed/disabled {0}
+spec.array.spec.does.nt.exists = Please enter valid specimen for specimen array\!\!specimen does not exist {0}
 spec.array.null =  Specimen Array for uploading is null
 storage.specified.full =  The Storage Container you specified is full
 
